May the Force be with you

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2-master",
-  "homepage": "https://github.com/LuckyF1re/hws2-master",
+  "homepage": "https://luckyf1re.github.io/hw2-master/",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
